@@ -3,3 +3,5 @@ Aagmaal Pro - fix thumbnails
 Desi Porn - Domain change
 Chaturbate - tags sorted alphabetically
 CelebsRoulette - new site
+Americass - new site
+Youcrazyx - fix images
